--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6 col-lg-3">
-        <p class="h6">LEGALes</p>
+        <p class="h6">LEGAL</p>
         <div>
           <a class="text-light" href="#">Privacidad</a>
         </div>
