--- a/index.html
+++ b/index.html
@@ -30,23 +30,24 @@
         </div>
       </div>
     </div>
+    <div class="buscador">
+      <form class="d-flex" role="search">
+        <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
+        <img class="lupa" src="lupa.png" type="submit"></img>
+      </form>
 
-    <form class="d-flex" role="search">
-      <input id class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
-      <img class="lupa" src="lupa.png" type="submit"></img>
-    </form>
-
-    <div class="dropdown d-flex">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Login
-      </button>
-      <ul class="dropdown-menu">
-        <li><button class="dropdown-item" type="button">Inicia Sesion</button></li>
-        <li><button class="dropdown-item" type="button">Registrate</button></li>
-        <li><button class="dropdown-item" type="button">Mi Cuenta</button></li>
-      </ul>
-      <div class="carrito">
-        <img src="carrito.png" alt="carrito">
+      <div class="dropdown d-flex">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Login
+        </button>
+        <ul class="dropdown-menu">
+          <li><button class="dropdown-item" type="button">Inicia Sesion</button></li>
+          <li><button class="dropdown-item" type="button">Registrate</button></li>
+          <li><button class="dropdown-item" type="button">Mi Cuenta</button></li>
+        </ul>
+        <div class="carrito">
+          <img src="carrito.png" alt="carrito">
+        </div>
       </div>
     </div>
 
@@ -54,13 +55,13 @@
   <main class="jumbotron">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-4 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+        <div id="cuadrantepadre" class="col-4 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
           <div class="col">
             <div id="cuadrante" class="row">
               <h1>Creamos experiencias para niños felices...</h1>
             </div>
             <div id="cuadrante" class="row">
-              <h4 class="text-center">Hablemos !!!</h4>
+              <h4 class="text-center pt-4">Hablemos !!!</h4>
               <div class="container w-50 text-dark py-3">
                 <form class="row g-3">
                   <div class="col-12">
@@ -99,26 +100,130 @@
   <main class="blog">
     <h2 class="text-center">Nuestras cajas de EXPERIENCIAS</h2>
     <div class="grid">
-      <div><img src="kit1.jpg" alt="">
-        <h4 class="text-center py-3">Caja de Tesoros</h4>
+      <article><img src="kit1.jpg" alt="">
+        <h4 class="text-center mt-2">Caja de Tesoros</h4>
+        <H6>Dentro de esta caja encontraras una cajita, pintura, pincel, pegamento y decoraciones.</H6>
+        <div class="comprar">
+          <div>
+            <h7>$8.990</h7>
+          </div>
+          <div>
+            <h7>+COMPRAR</h7>
+          </div>
+        </div>
+      </article>
+      <article><img src="kit2.jpg" alt="">
+        <h4 class="text-center mt-2">Caja de Disfraz</h4>
+        <h6>Dentro de esta caja encontraras una capa, un antifaz, pegamento y decoración.</h6>
+        <div class="comprar">
+          <div>
+            <h7>$8.990</h7>
+          </div>
+          <div>
+            <h7>+COMPRAR</h7>
+          </div>
+        </div>
+      </article>
+      <article><img src="kit3.jpg" alt="">
+        <h4 class="text-center mt-2">Caja de Yeso</h4>
+        <h6>Dentro de esta caja encontraras una figura de yeso, pintura, pincel y marcadores.</h6>
+        <div class="comprar">
+          <div>
+            <h7>$8.990</h7>
+          </div>
+          <div>
+            <h7>+COMPRAR</h7>
+          </div>
+        </div>
+      </article>
+      <article><img src="kit4.jpg" alt="">
+        <h4 class="text-center mt-2">Caja de Jockey</h4>
+        <h6>Dentro de esta caja encontraras un jockey, pegamento, lápices y decoraciones.</h6>
+        <div class="comprar">
+          <div>
+            <h7>$8.990</h7>
+          </div>
+          <div>
+            <h7>+COMPRAR</h7>
+          </div>
+        </div>
+      </article>
+    </div>
+  </main>
+  <main class="adicionales">
+    <div class="row">
+      <div id="mapabase" class="col-6">
+        <div>
+          <h2 class="text-center mb-">
+            Donde estamos?
+          </h2>
+        </div>
+        <div class="text-center">
+          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1cWWugydNuJ6MfNjD5CYlhiLylaazRTc&ehbc=2E312F"
+            width="400" height="300">
+          </iframe>
+        </div>
+        <div>
+          <h6 class="text-center p-3">Calle Dos y 1/2 Norte 222, Talca, Region del Maule</h6>
+        </div>
       </div>
-      <div><img src="kit2.jpg" alt="">
-        <h4 class="text-center py-3">Caja de Disfraz</h4>
-      </div>
-      <div><img src="kit3.jpg" alt="">
-        <h4 class="text-center py-3">Caja de Yeso</h4>
-      </div>
-      <div><img src="kit4.jpg" alt="">
-        <h4 class="text-center py-3">Caja de Jockey</h4>
+      <div class="col-6">
+        <h2 class="text-center mb-3">
+          Como comprar?
+        </h2>
+        <ul>
+          <li>
+            <h3 class="text-center">1</h3>
+            <h6>Selecciona el producto que deseas comprar.</h6>
+          </li>
+          <li>
+            <h3 class="text-center">2</h3>
+            <h6>Haz click en +COMPRAR para agregar al carro de compras.</h6>
+          </li>
+          <li>
+            <h3 class="text-center">3</h3>
+            <h6>Dirigete a tu carro de compras y completa toda la informacion.</h6>
+          </li>
+          <li>
+            <h3 class="text-center">4</h3>
+            <h6>Realiza el pago y finaliza la transacción.</h6>
+          </li>
+          <li>
+            <h3 class="text-center">5</h3>
+            <h6>Tu pedido llegara a tu casa a travez de FedEx.</h6>
+          </li>
+        </ul>
+        <div class="logosrrss text-center">
+          <h2 class="text-center">
+            RRSS
+          </h2>
+          <img src="logofb.png" alt="">
+          <img src="logoig.png" alt="">
+          <img src="logomail.png" alt="">
+          <img src="logotwit.png" alt="">
+          <img src="logoyt.png" alt="">
+        </div>
       </div>
     </div>
   </main>
 
   <footer class="container-fluid">
-    <div class="row p-5 text-light">
-      <div class="col-xs-12 col-md-6 col-lg-3">
+    <div class="row p-4 text-light">
+      <div class="col-xs-12 col-md-6 col-lg-2">
         <img class="logofooter" src="Logofooter.png">
         <p>Serpentina SPA ®</p>
+      </div>
+      <div class="col-xs-12 col-md-6 col-lg-3">
+        <p class="h6">NOSOTROS</p>
+        <div>
+          <a class="text-light" href="#">Historia</a>
+        </div>
+        <div>
+          <a class="text-light" href="#">Quienes somos</a>
+        </div>
+        <div>
+          <a class="text-light" href="#">Equipo</a>
+        </div>
       </div>
       <div class="col-xs-12 col-md-6 col-lg-3">
         <p class="h6">EXPERIENCIAS</p>
@@ -144,7 +249,7 @@
           <a class="text-light" href="#">Contacto@serpentina.cl</a>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6 col-lg-3">
+      <div class="col-xs-12 col-md-6 col-lg-1">
         <p class="h6">LEGAL</p>
         <div>
           <a class="text-light" href="#">Privacidad</a>
