Se corrigen problemas de responsividad

--- a/index.html
+++ b/index.html
@@ -62,17 +62,18 @@
             </div>
             <div id="cuadrante" class="row">
               <h4 class="text-center pt-4">Hablemos !!!</h4>
-              <div class="container w-50 text-dark py-3">
+
+              <div class="container text-dark py-3">
                 <form class="row g-3">
-                  <div class="col-12">
+                  <div class="col-12 col-sm-8">
                     <input type="text" class="form-control bg-danger bg-opacity-50 border-black" id="inputAddress"
                       placeholder="Ingresa tu Correo"></input>
                   </div>
+                  <button type="submit"
+                    class="btn btn text-black bg-danger bg-opacity-50 border-black col-12 col-sm-4">Enviar</button>
                 </form>
               </div>
-              <div class="col-4">
-                <button type="submit" class="btn btn text-black bg-danger bg-opacity-50 border-black">Enviar</button>
-              </div>
+
             </div>
           </div>
         </div>
@@ -100,7 +101,9 @@
   <main class="blog">
     <h2 class="text-center">Nuestras cajas de EXPERIENCIAS</h2>
     <div class="grid">
-      <article><img src="kit1.jpg" alt="">
+      <article>
+
+        <img src="kit1.jpg" alt="">
         <h4 class="text-center mt-2">Caja de Tesoros</h4>
         <H6>Dentro de esta caja encontraras una cajita, pintura, pincel, pegamento y decoraciones.</H6>
         <div class="comprar">
@@ -152,7 +155,7 @@
   </main>
   <main class="adicionales">
     <div class="row">
-      <div id="mapabase" class="col-6">
+      <div id="mapabase" class="col-12 col-md-6">
         <div>
           <h2 class="text-center mb-">
             Donde estamos?
@@ -167,29 +170,29 @@
           <h6 class="text-center p-3">Calle Dos y 1/2 Norte 222, Talca, Region del Maule</h6>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-12 col-md-6">
         <h2 class="text-center mb-3">
           Como comprar?
         </h2>
         <ul>
           <li>
-            <h3 class="text-center">1</h3>
+            <div class="text-center">1</div>
             <h6>Selecciona el producto que deseas comprar.</h6>
           </li>
           <li>
-            <h3 class="text-center">2</h3>
+            <div class="text-center">2</div>
             <h6>Haz click en +COMPRAR para agregar al carro de compras.</h6>
           </li>
           <li>
-            <h3 class="text-center">3</h3>
+            <div class="text-center">3</div>
             <h6>Dirigete a tu carro de compras y completa toda la informacion.</h6>
           </li>
           <li>
-            <h3 class="text-center">4</h3>
+            <div class="text-center">4</div>
             <h6>Realiza el pago y finaliza la transacción.</h6>
           </li>
           <li>
-            <h3 class="text-center">5</h3>
+            <div class="text-center">5</div>
             <h6>Tu pedido llegara a tu casa a travez de FedEx.</h6>
           </li>
         </ul>
